Altered overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 @layer base {
   body {
-    @apply overflow-hidden text-primary font-secondary bg-white;
+    @apply text-primary font-secondary bg-white overflow-x-hidden overflow-y-auto;
   }
   .h1 {
     @apply text-[54px] lg:text-[108px] font-primary font-bold capitalize leading-[120%] tracking-[-0.05em] mb-2;
